# solana-coin-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  requirements.txt
app/: main.py
app/config/: loader.py
app/core/: settings.py
app/database/: base.py  models.py
app/services/: analysis.py  dexscreener_client.py  pocket_universe_service.py  rugcheck_service.py  telegram_commands.py  telegram_notifier.py  telegram_types.py
app/tasks/: fetch_and_store.py  scheduler.py
configs/: config.template.json
scripts/: test_dexscreener.py  test_rugcheck.py  test_telegram_bot.py
